# MPU6050-LIBRARY

./: CMakeLists.txt  lcd_i2c.c  lcd_i2c.h  main.c  main.cpp  mpu6050.cpp  mpu6050.h
